--- a/Views/Tenants/Index.cshtml
+++ b/Views/Tenants/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<KarlixID.Web.Models.Tenant>
 @{
-    ViewData["Title"] = "Tenanti (test)";
+    ViewData["Title"] = "Tenanti";
 }
 
 <h2>@ViewData["Title"]</h2>
