--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Tenanti";
 }
 
-<h1>Popis tenanata</h1>
+<h1>Popis tenanta</h1>
 
 <a asp-action="CreateTenant" class="btn btn-primary mb-3">Dodaj novi tenant</a>
 
